Fixed not showing menu-icon

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -15,6 +15,10 @@
   color: orange !important;
 }
 
+.menu-icon:hover {
+  color: orange !important;
+}
+
 @media only screen and (max-width: 768px) {
   .navbar {
     background-color: #23272e;
@@ -22,7 +26,7 @@
 }
 
 @media only screen and (min-width: 913px) {
-  #menuIcon {
+  .menu-icon {
     display: none;
   }
 }
